--- a/md/基础知识/01/01.html
+++ b/md/基础知识/01/01.html
@@ -140,7 +140,7 @@
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第一节 概述</h1>
 <h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理的概念 ✳</h2>
 <p>健康管理的发展与社会文明进步息息相关。</p>
-<p>健康管理在 <code class="language-vim">20 世纪 80 年代从美国兴起</code>，随后英 国、德国、z 法国和日本等发达国家积极效仿和实施健康管理。</p>
+<p>健康管理在 <code class="language-vim">20 世纪 80 年代从美国兴起</code>，随后英国、德国、法国和日本等发达国家积极效仿和实施健康管理。</p>
 <p><code class="language-vim">进入 21 世纪后，健康管理开始在我国逐步兴起与发展。</code></p>
 <ul>
 <li>健康管理含义视角：
