--- a/md/基础知识/02/01.html
+++ b/md/基础知识/02/01.html
@@ -136,8 +136,43 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一节 概述</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>临床医学的学科分类和主要特征</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>临床医学的主要特征 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>临床医学的发展趋势</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>循证医学 ✳</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第一节 概述</h1>
+<p>现代医学，通常根据其研究内容、服务对象和服务方式，分为<code class="language-vim">基础医学</code>、<code class="language-vim">预防医学</code>和<code class="language-vim">临床医学</code>。</p>
+<p>临床医学是研究疾病的病因、诊断、治疗和预后，直接面对患者实施诊断和治疗的一组医学学科，如诊断学、内科学、外科学、妇产科学、儿科学等都属于临床医学。</p>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 临床医学的学科分类和主要特征</h2>
+<p>临床专业学科大体上有 5 种建立方式。</p>
+<ul>
+<li>按治疗手段建立的学科：内科学、外科学、理疗学、放射治疗学、核医学、营养治疗学和心理治疗学等。</li>
+<li>按治疗对象建立的学科：妇产科学、儿科学、老年病学、危重病医学、职业病学等。</li>
+<li>按人体的系统或解剖部位建立的学科：口腔科学、皮肤性病学、眼科学、神经病学、耳鼻咽喉科学、心血管内科、呼吸内科、泌尿外科、胸外科等。</li>
+<li>按病种建立的学科：结核病学、肿瘤学、精神病学等。</li>
+<li>按诊断手段建立的科学：临床病理学、医学检验学、放射诊断学、超声诊断学等。</li>
+</ul>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 临床医学的主要特征 ✳</h2>
+<ol>
+<li>临床医学研究和服务的对象是人</li>
+<li>临床工作具有探索性</li>
+<li>临床医学启动医学研究</li>
+<li>临床医学检验医学成果</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 临床医学的发展趋势</h2>
+<ol>
+<li>
+<p>微观深入与宏观扩展</p>
+</li>
+<li>
+<p>学科体系分化与综合</p>
+</li>
+<li>
+<p>医学与高科技的结合日趋密切</p>
+<p>计算机处理技术使影像学包括 CT、MRI、数字减影、超声、同位素等医学图像检查发生了革命性变化；应用医用光导纤维技术的各种内镜和导管等无创、低创性直视检查技术，可深入到人体各个脏器和部位，获得准确的形态、功能、病理诊断；人体基因谱分析，可使遗传性和与遗传因素有关的疾病得到早期发现和准确诊断。</p>
+</li>
+</ol>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 循证医学 ✳</h2>
+<p>循证医学是<code class="language-vim">应用最多的有关信息（最佳的证据 ），通过谨慎、明确和明智的确认和评估，做出医学决策的实践活动</code>。</p>
+<p>循证医学考虑“成本 - 效果分析”，要求对现有众多的诊断、治疗或其他干预措施和临床决策，采用客观的证据予以卫生经济学评估，以尽可能减少投入满足医疗保健需求，使卫生资源得到优化配置和利用。</p>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +231,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "02.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
