--- a/md/基础知识/02/02.html
+++ b/md/基础知识/02/02.html
@@ -136,8 +136,271 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>现代医学主要诊断方法和技术</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>问诊和病史采集</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>体格检查</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>实验诊断</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>医学影像检查</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>其他临床辅助检查</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>现代医学主要诊断方法和技术</h1>
+<p>现代医学的诊断，主要是通过<code class="language-vim">问诊釆集病史</code>，全面系统地了解患者的症状；通过<code class="language-vim">视诊</code>、<code class="language-vim">触诊</code>、<code class="language-vim">叩诊</code>和<code class="language-vim">听诊</code>等体格检查发现患者在的体征，并进行一些<code class="language-vim">必要的实验室检查</code>，如血液学检查、生物化学检查、病原学检查、病翟学检查，以及<code class="language-vim">心电图</code>、<code class="language-vim">X 线</code>和<code class="language-vim">超声</code>等辅助检查，收集这些临床资料后，予以综合分析，得出临床诊断。</p>
+<ul>
+<li>临床诊断包括：
+<ol>
+<li>病因诊断：根据致病原因而提出的诊断，说明了疾病的本质；</li>
+<li>病理解剖诊断（病理形态诊断）：即根据病变组器官的形态改变进行的诊断；</li>
+<li>病理生理诊断（功能诊断）: 即根据器官功能状况作出的诊断。</li>
+</ol>
+</li>
+</ul>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 问诊和病史采集</h2>
+<p>采集病史是医生诊治患者的第一步。</p>
+<ul>
+<li>问诊内容主要包括：
+<ol>
+<li>患者一般情况</li>
+<li>主诉：患者感受最主要的痛苦后最明显的症状，也就是本次就诊最主要的原因及其持续时间；</li>
+<li>现病史：此次患病后的全过程；</li>
+<li>既往史：包括患者既往的健康状况和过去曾经换过的病（包括各种传染病）、外伤手术、预防注射、过敏，特别是与目前所患疾病有密切关系的情况；</li>
+<li>个人史、家族史、女性还应包括月经史和生育史。</li>
+</ol>
+</li>
+</ul>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 体格检查</h2>
+<p>体格检查，是指医师运用自己的感官，或償助于传统简便的检查工具，如体温表、血压计、叩诊锤、听诊器、检眼镜等，客观地了解和评估患者身体状况的一系列最基本的检查方法。</p>
+<p><code class="language-vim">通过体格检查发现的客观改变即体征</code>。体格检查的基本方法包括：<code class="language-vim">视诊</code>、<code class="language-vim">触诊</code>、<code class="language-vim">叩诊</code>、<code class="language-vim">听诊</code>。 ✳</p>
+<ol>
+<li>
+<p>视诊</p>
+<p>用于全身一般状态和许多体他的检查，如发育、营养、意识状态、面容、步态等。局部视诊可了解患者身体各部分的改变。</p>
+</li>
+<li>
+<p>触诊</p>
+<p>可明确视诊不能明确的体征，如体温、湿度、震颤、波动、压痛、摩擦感以及包块的位置、大小、轮廓、表面性质、硬度、移动度等。触诊的适用范围很广，尤以<code class="language-vim">腹部</code>检查更为重要。触诊根据施加的压力轻重，可分为<code class="language-vim">浅部触诊法</code>和<code class="language-vim">深度触诊法</code>。</p>
+</li>
+<li>
+<p>叩诊</p>
+<p>用手指叩击身体表面某一部位，震动而产生音响，根据震动和声响的特点来判断被检查部位的脏器状态有无异常。根据叩诊的目的和叩诊的手法不同可分为<code class="language-vim">直接叩诊法</code>和<code class="language-vim">间接叩诊</code>两种。</p>
+</li>
+<li>
+<p>听诊</p>
+<p>目前主要采用间接听诊法，即用听诊器进行听诊。除心、肺、腹的听诊外，还可以听取身体其他部位发出的声音，如血管音、骨折面摩擦音等。</p>
+</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 实验诊断</h2>
+<ul>
+<li>
+<p>临床实验室检查主要内容</p>
+<ol>
+<li>
+<p>血液学检验</p>
+<p>包括红细胞、白细胞和血小板数量、生成动力学、形态学和细胞化学等的检验；止血功能、血栓栓塞、抗凝和纤溶功能的检验；溶血检验；血型鉴定和交叉配血试验等。</p>
+<p>血液常规检测包括<code class="language-vim">红细胞计数</code>、<code class="language-vim">血红蛋白测定</code>、<code class="language-vim">白细胞计数及其分类计数</code>；<code class="language-vim">红细胞平均值测定</code>和<code class="language-vim">红细胞形态检测</code>、<code class="language-vim">血小板平均值测定</code>和<code class="language-vim">血小板形态检测</code>等。</p>
+</li>
+<li>
+<p>体液与排泄物检验</p>
+<p>对尿、粪和各种体液及胃液、脑脊液、胆汁等排泄物、分泌液的常规检验。</p>
+<p>尿液一般检测包括：</p>
+<ul>
+<li>一般性状检测：尿量、气味、外观、比 重、酸碱度等；</li>
+<li>化学检测：尿蛋白、尿糖、尿酮体、尿胆原、尿胆红素等；</li>
+<li>尿沉渣（显微镜）检测：细胞、管型、结晶体等。</li>
+</ul>
+</li>
+<li>
+<p>生化学检验</p>
+<p>包括糖、脂肪、蛋白质及其代谢产物和衍生物的检验；血液和体液中电解质和微量元素检验；血气分析和酸碱平衡的检验；临床酶学检验；激素和内分泌功能的检验；药物和毒物浓度检测等。</p>
+<p>肾功能检测包括：肾小球滤过功能，常用的指标有血清肌酊测定、血尿素氮测定；肾小管重吸收、酸化等功能。</p>
+<p>肝功能试验通常包括：血清总蛋白和白蛋白 / 球蛋白比值测定、血清蛋白电泳、血清总胆红素测定、血清结合胆红素与非结合胆红素测定、<code class="language-vim">血清丙氨酸氨基转移酶</code>（ALT, 旧称谷氨酸丙酮酸转移酶，GPT）和<code class="language-vim">天门冬氨酸氨基转移酶</code>（AST, 旧称谷氨酸草酰乙酸转移酶，GOT）、碱性磷酸酶（ALP）、Y - 谷氨酰转移酶（Y-CT）等项目。</p>
+</li>
+<li>
+<p>免疫学检验</p>
+<p>主要包括免疫功能检查、临床血清学检查，以及肿瘤标志物等的临床免疫学检测检验。</p>
+<p>肿瘤标志物指在肿瘤发生和增殖过程中，由肿瘤细胞合成、释放或机体对肿瘤细胞反应而产生的一类物质。当机体发生肿瘤，血液、细胞、组织或体液中的某些肿瘤标志物可能会升高。如<code class="language-vim">肝癌患者常会有甲胎蛋白(AFP)升高、前列腺癌患者常会有前列腺特异性抗原(PSA)升高</code>。</p>
+</li>
+<li>
+<p>病原学检验</p>
+<p>感染性疾病的常见病原体检查、医院感染的常见病原体检查、性传播性疾病的病原体检查，细菌耐药性检查等。另外，临床遗传学检查、临床脱落细胞学检查等也一般包括在实验室检查范围内。</p>
+</li>
+</ol>
+</li>
+<li>
+<p>实验诊断的临床应用和评价</p>
+<ol>
+<li>
+<p>正确选择实验室检查项目</p>
+<p>选择项目时应选择对疾病诊断灵敏度高和特异性强的检验项目来进行检查。要在认真和详尽地进行病史询问和体格检查得到初步诊断的基础上，从疾病诊断的实际需要出发，选用针对性和特异性较强的项目进行检查，做到有的放矢。</p>
+</li>
+<li>
+<p>常用诊断性实验的评价指标 ✳</p>
+<ul>
+<li>诊断灵敏度：指某检验项目对某种疾病具有鉴别、确认的能力。诊断灵敏度的数学式为<code class="language-vim">所有患者中获得真阳性结果的百分数</code>。</li>
+<li>诊断特异性：指某检验项目确认无某种疾病的能力，即<code class="language-vim">所有非患者中获得真阴性结果的百分数</code>。</li>
+<li>诊断准确度：指某检验项目在实际使用中，所有检验结果中诊断准确结果的百分比。</li>
+</ul>
+</li>
+<li>
+<p>实验诊断的参考值范围的确定</p>
+<p>参考值是指对抽样的个体进行某项目检测所得的值；所有抽样组测得的平均值加减两个标准差即为参考范围。</p>
+</li>
+</ol>
+</li>
+</ul>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 医学影像检查</h2>
+<p>临床常用的医学影像检查有 X 线检查、超声成像、CT 成像和磁共振（MRI）成像。</p>
+<ul>
+<li>
+<p>X 线成像</p>
+<p>X 线成像，是基于 X 线对人体组织的穿透性及不同组织由于厚度、密度差异，对 X 线吸收衰减不同而形成图像。高密度、高厚度组织在 X 线片呈白色，低密度、低厚度组织则呈黑色。</p>
+<ul>
+<li>
+<p>X 线优缺点： ✳</p>
+<ul>
+<li>优点：可获得永久性图像记录，<code class="language-vim">是目前呼吸系统、骨关节系统、消化系统等疾病的首选影像检查方法</code>。</li>
+<li>缺点：X 线检查是有射线的检查方法，该<code class="language-vim">检查为组织的重叠图像，对于组织密度差小的器官组织较难分辨；部分造影检查为有创性，碘造影剂有发生过敏反应的风险</code>。</li>
+</ul>
+</li>
+<li>
+<p>检查方法</p>
+<p>按照 X 线检查手段不同分为普通检查和造影检查。</p>
+<p>普通检查为不引入造影剂的一般性透视或拍片检查。造影检查为将造影剂引入体内的腔、隙、管、道内的检查。</p>
+<p>按照成像方式不同分为透视检查和摄影检查。</p>
+<p>摄影检查是目前最常用的检查方法，将组织的厚度、密度改变永久性地记录在照片上，图像清晰，対比度好。缺点是<code class="language-vim">只能得到一个方向的重叠图像</code>。为了立体观察常需要做互相垂直的两方向摄像，不能做<code class="language-vim">动态观察</code>。</p>
+</li>
+<li>
+<p>数字 X 线成像和数字减影血管造影</p>
+<p>数字 X 线成像 (DR) 是将普通 X 线摄影装置或透视装置同电子计算机相结合，使 X 线信息由模拟信息转换为数字信息，而得到数字图像的成像技术。</p>
+<p>DR 依其结构上的差别可分为计算机 X 线成像 (CR)、数字 X 线荧光成像 (DF) 和平板探测器数字 X 线成像。</p>
+</li>
+<li>
+<p>疾病 X 线图像表现 ✳</p>
+<p>疾病 X 线图像改变，可有<code class="language-vim">大小改变</code>，如心影增大；<code class="language-vim">位置改变</code>，如关节脱位等；<code class="language-vim">形态改变</code>，如各种呼吸系统、循环系统、消化系统、泌尿生殖系统、骨骼关节系统的发育异常、炎症、肿瘤、外伤等都产生形态结构变化；<code class="language-vim">轮廓改变</code>，如心脏病、心包病变、骨关节疾病的诊断依靠这些器官外形轮廓的变化；<code class="language-vim">密度改变</code>，如肺内渗出、肿瘤致肺内异常密度増高，骨骼炎症、肿瘤致骨骼密度降低或破坏；<code class="language-vim">功能改变</code>，如某些疾病发生功能变化，如心包积液心脏搏动减弱或消失等。</p>
+</li>
+</ul>
+</li>
+<li>
+<p>CT 检查</p>
+<p>CT 图像是 X 线束穿过人体特定层面进行扫描，经计算机处理而获得的重建图像。</p>
+<p>组织对 X 线吸收衰减可以通过量化 CT 值表示，其—般使用 Hounsfield 单位 (Hu)。</p>
+<ul>
+<li>
+<p>CT 检查优缺点</p>
+<ul>
+<li>优点：CT 图像为人体组织断面像，其密度分辨率明显优于 X 线检查图像；能良好地显示人体内各部位的器官结构，除发现形态改变外，还能检查组织的密度变化，扩大了影像学的检查范围。</li>
+<li>缺点：CT 检查是有射线的检查方法，较难发现器管组织结构的功能变化；个别部位如颅底部骨伪影可影响后颅凹脑组织检查；因成像野的限制，不宜检查四肢小关节，难以显示空腔器官的黏膜变化；做强化扫描时有造影剂的不良反应存在。</li>
+</ul>
+</li>
+<li>
+<p>检查方法</p>
+<p>按照 CT 检查时造影剂的应用与否，可将 CT 检查分为<code class="language-vim">平扫</code>、<code class="language-vim">造影强化扫描</code>和<code class="language-vim">造影扫描</code>。</p>
+<ul>
+<li>平扫：不给予造影剂的单纯 CT 扫描，对腹部扫描有时给予口服造影剂，如水、碘剂等。</li>
+<li>CT 造影强化扫描：一般从肘静脉注射 60% 碘剂 造影剂 100ml 左右进行病变区扫描。</li>
+<li>CT 造影扫描：为 X 线造影检查后进行的 CT 扫描， 如脑池碘剂或空气造影、脊髓造影后进行脑、脊髓的 CT 检查。</li>
+</ul>
+</li>
+<li>
+<p>CT 特殊检查技术</p>
+<ol>
+<li>螺旋 CT</li>
+<li>CT 血管造影</li>
+<li>CT 仿真内镜检查</li>
+<li>定量 CT 检查</li>
+<li>多层 CT 扫描</li>
+</ol>
+</li>
+</ul>
+</li>
+<li>
+<p>超声成像</p>
+<p>超声是指振动频率在 20000 次 / 秒 (Hz) 以上，超过人耳听觉阀值上限的声波。超声检查是利用超声波的物理特性和人体器官组织声学特性间的相互作用，获取信息并处理后，形成图形、曲线或其他数据，以诊断疾病。</p>
+<ul>
+<li>
+<p>超声诊断的种类 ✳</p>
+<p>超声示波诊断法、二维超声显像诊断法、超声光点扫描法、多普勒超声诊法。</p>
+</li>
+<li>
+<p>超声图像特点 ✳</p>
+<p>根据不同组织的声阻抗及其均质性，可将人体组织器官分成四种声学类型。</p>
+<table>
+<thead>
+<tr>
+<th align="left">类型</th>
+<th align="left">临床意义</th>
+<th align="left">二维超声表现</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left">无回声型</td>
+<td align="left">尿、胆汁、血液、胸水、腹水及心包积液、羊水等</td>
+<td align="left">液性暗区</td>
+</tr>
+<tr>
+<td align="left">低回声型</td>
+<td align="left">肝、脾、心肌</td>
+<td align="left">均匀细小中等强度的光点</td>
+</tr>
+<tr>
+<td align="left">强回声型</td>
+<td align="left">心内膜、心瓣膜、肾包膜、胆囊壁等</td>
+<td align="left">较强的密集光点回声</td>
+</tr>
+<tr>
+<td align="left">含气型</td>
+<td align="left">肺、胃肠道等</td>
+<td align="left">强反射，界面后方的组织结构不能显示</td>
+</tr>
+</tbody>
+</table>
+</li>
+<li>
+<p>超声检查的主要用途</p>
+<ol>
+<li>检测实质性脏器的大小、形态及物理特性。</li>
+<li>检测某些囊性器官（如胆素、胆道、膀胱等）的形态、走向及功能状态。</li>
+<li>检测心脏、大血管和外周血管的结构、功能及血流动力学状态，包括对各种先天性、后天性心脏病、血管畸形及向基性血管病变的诊断。</li>
+<li>检测脏器内各种占位性病变的物埋特性。根据占位性病变的声学分型，鉴别占位病变的实质性、囊性，还是囊实混合性，部分还可鉴良、恶性。</li>
+<li>检测积液（如胸腔积液、心包积液、胆囊积液、肾盂积液及脓肿等）的存在与否，以及对积液量的多少作出估计。</li>
+<li>产科上可确定妊娠，判断胎位、胎儿数量；确定胎龄，评价胎儿生长发育情况；发现胎儿畸形；评定胎儿生理功能。超声引导下还可对羊水、脐血、胎儿组织取样做染色体等实验室检查，或对胎儿进行宫内治疗。</li>
+<li>在超声引导下进行穿刺做针吸细胞学或组织活检，或进行某些引流及药物注入治疗。</li>
+</ol>
+</li>
+</ul>
+</li>
+<li>
+<p>磁共振成像</p>
+<p>磁共振成像（MRI）是利用人体氢原子核（质子）在巨大、恒定、均匀磁场中受射频脉冲激动后共振，经接收线圈接收后计算机处理的人体断面图像。</p>
+<ul>
+<li>
+<p>检查方法</p>
+<p>按照 MRI 检查时造影剂使用与否分为<code class="language-vim">平扫</code>和<code class="language-vim">强化扫描</code>两种，还会使用 MRI 特殊成像技术。</p>
+</li>
+<li>
+<p>MRI 图像优缺点</p>
+<ul>
+<li>优点：MRI 图像无射线损害；通过梯度场和射频场的更换可完成矢状、冠状、横切、斜切等多轴成像；图像不受人体正常组织干扰，不像 CT 有骨骼等干扰伪影；MRI 强化扫描使用钆造影剂，无不良反应。</li>
+<li>缺点：MRI 成像时间较长，近年来采用快速成像方法已缩短为 5 分钟以下；因患者置于磁体内有恐惧感，现已改为宽入口短磁体，可避免或消除恐惧；因成像线圈和成像野的限制，小关节小部位的成像开展不普及；机器昂贵，运行费用高，检查费用高。</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 其他临床辅助检查</h2>
+<ul>
+<li>
+<p>心电图检查</p>
+<p>心电图除主要用于心脏疾病的诊断，各种危重患者的抢救、手术麻醉、药物作用和电解质紊乱的监测、航天、登山运动的心电监测等。</p>
+<p>心电图能反映心脏激动的电学活动，对各种心律 失常和传导障碍的诊断分析具有肯定价值，特征性的心电图改变和演变是诊断心肌梗死可靠而实用的方法。</p>
+</li>
+<li>
+<p>核医学检查</p>
+<p>核医学诊断方法按放射性核素是否引入受检者体内分为体外检查法和体内检查法。</p>
+<p>体内检查法根据最后是否成像又分为显像和非显像两种。</p>
+<p>核医学的必备物质条件是放射性药物、放射性试剂和核医学仪器。</p>
+</li>
+<li>
+<p>内镜检查</p>
+<p>借助内镜可直接观察到脏器内腔病变，确定<code class="language-vim">其部位、范围、并可进行照相、活检及进行某些治疗</code>。在诊断上，<code class="language-vim">内镜应用最广者是消化道和支气管</code>的检查。</p>
+<p>上消化道内镜检查包括食管、胃、十二指肠的检查，是应用最早、进展最快的内镜检查；下消化道内镜检查包括乙状结肠镜、结肠镜和小肠镜检查，以结肠镜应用较多，可了解部分小肠和全结肠病变。</p>
+</li>
+</ul>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +459,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "03.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
