--- a/md/基础知识/02/03.html
+++ b/md/基础知识/02/03.html
@@ -136,8 +136,150 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第三节 现代医学主要治疗方法</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>药物治疗</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>手术治疗</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>介入治疗</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>放射治疗</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>物理疗法</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第三节 现代医学主要治疗方法</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 药物治疗</h2>
+<p><code class="language-vim">药物治疗，是最常用和最主要的治疗方法</code>。</p>
+<p>我国管理部门对药品的定义为：“用于预防、治疗、诊断人的疾病，有目的地调节人的生理功能并规定有适应证或者功能主治、用法和用量的物质，包括中药材、中药饮片、中成药、化学原料药及其制剂、抗生素、生化药品、放射性药品、血清、疫苗、血液制品和诊断药品等”。</p>
+<p>根据药物的性质、剂型、组织对药物的吸收情况及治疗需要，药物给药途径可有<code class="language-vim">口服</code>、<code class="language-vim">舌下含化</code>、<code class="language-vim">吸入</code>、<code class="language-vim">外敷</code>、<code class="language-vim">直肠给药</code>、<code class="language-vim">注射</code>（皮内、皮下、肌肉、静脉、动脉注射）等。 ✳</p>
+<ul>
+<li>
+<p>药物治疗作用及不良反应</p>
+<p>药物不良反应指的是所有不符合用药目的并为患者带来不适或痛苦的有害反应。</p>
+<p>不同类的药物可能会出现相似的不良反应、同类药物的不良反应也可有量和质的差异。</p>
+</li>
+<li>
+<p>药物选择原则 ✳</p>
+<ol>
+<li>根据疾病的严重程度选择用药</li>
+<li>根据药物药动学和药效学的特点选择药物</li>
+<li>根据患者的个体差异来选择用药</li>
+<li>根据药物的价格或效应来选择用药</li>
+</ol>
+</li>
+<li>
+<p>合理用药</p>
+<p>要做到合理用药，首先要明确疾病的诊断，有选择性地用药；其次，在初步确定使用哪一类药物后，要根据所选药物的药效动力学和药代动力学的特点制订合适的剂量、给药途径、疗程等。此外，要考虑可能出现的药物不良反应，最好达到个体化给药，可考虑联合用药。</p>
+</li>
+<li>
+<p>药源性疾病分为以下几类：</p>
+<ol>
+<li>甲型（量效关系密切，由药物本身或其代谢物引起的疾病，药物固有作用增强和持续作用的结果）</li>
+<li>乙型（量效关系不密切，与人体的特异体质有关）</li>
+<li>长期用药致病型（长期应用地西洋类镇静催眠药者，停药后可出现焦虑）</li>
+<li>药后效应型（药物应用后导致的恶性肿瘤和生殖毒性的发生，如抗生育、致畸或通过母乳对婴儿引起的过敏反应）</li>
+</ol>
+</li>
+<li>
+<p>抗生素的合理用药</p>
+<p>细菌对抗生素的耐药机制主要有：</p>
+<ol>
+<li>产生灭活酶使抗生素失活；</li>
+<li>改变靶物质产生耐药性；</li>
+<li>降低抗生素在菌体内的积聚。</li>
+</ol>
+<p><code class="language-vim">合理使用抗生素包括合理选药和合理给药两方面</code>。</p>
+<p>选择抗生素时，首先应分析可能的致病菌并据此来选用敏感的抗生素，一般应用药物敏感试验来筛选抗生素。当病情危重时则应根据患者的感染部位、可能感染的菌群来选用抗菌谱较广的药物。</p>
+</li>
+</ul>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 手术治疗</h2>
+<p>手术除治疗作用外，也对机体有不利的影响，主要有两方面：一方面是局部损伤，包括出血、组织破损、炎症及感染、瘢痕形成等；另一方面是对全身各系统的影响，如能量代谢增强、内分泌系统活跃、循环系统负担加重，腹部手术使消化系统功能受到抑制、免疫系统受到抑制等。手术后的常见并发症有手术后出血、切口的感染、切口裂开、肺不张及感染、尿潴留及感染等。</p>
+<p>微创外科手术，如显微外科手术和内镜手术逐渐发展和普及，越来越多地取代了传统手术。</p>
+<ol>
+<li>
+<p>显微外科手术</p>
+<p>外科医生在手术显微镜下进行的各类手术，在耳鼻喉科及眼科的应用最早，创伤与整形外科、泌尿外科、神经外科、心血管外科广泛应用。</p>
+</li>
+<li>
+<p>腔镜手术</p>
+<p>腔镜手术是借助内镜进入体腔用肉眼直接观察进行手术或检查的方法，用于胃肠外科、肝胆外科、血管外科、妇科、肿瘤外科、胸外科等疾病的诊断与治疗，其最大优点是创伤小，患者恢复快。</p>
+</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 介入治疗</h2>
+<p>介入治疗是指在医学影像或内镜的导向下，利用经皮穿刺和导管技术，通过药物、物理、化学等手段直接消除或减轻局部病变，从而达到治疗目的。</p>
+<p>介入治疗具有<code class="language-vim">微创</code>、<code class="language-vim">可重复性强</code>、<code class="language-vim">定位准确</code>等特点，对有些疾病，其疗效优于传统内、外科治疗。</p>
+<p>介入治疗技术主要有：血管性介入技术、非血管性介入技术、内镜下的介入技术。</p>
+<ol>
+<li>
+<p>血管性介入技术</p>
+<p>例如：</p>
+<ul>
+<li>经导管血管栓塞术；</li>
+<li>经导管局部药物灌注术；</li>
+<li>经导管腔内血管成形术；</li>
+<li>经皮血管内支架置放术；</li>
+<li>经颈静脉肝内门腔分流术；</li>
+<li>经皮血管内异物和血栓取出术；</li>
+<li>经皮血管内导管药盒系统植入术；</li>
+<li>心脏瓣膜成形术；</li>
+<li>射频消融术；</li>
+<li>选择性血管造影术和药物性血管造影技术等。</li>
+</ul>
+</li>
+<li>
+<p>非血管性介入技术</p>
+<p>例如：</p>
+<ul>
+<li>经皮针吸活检术；</li>
+<li>经皮穿刺内、外引流术；</li>
+<li>经皮椎间盘切割术；</li>
+<li>输卵管再通术；</li>
+<li>腹水 - 静脉转流术；</li>
+<li>脑积水腹腔或静脉转流术；</li>
+<li>内支架置放术；</li>
+<li>经皮胃造痿术；</li>
+<li>结石处理技术；</li>
+<li>“T”形管置换术等。</li>
+</ul>
+</li>
+<li>
+<p>内镜下的介入技术</p>
+<p>例如：</p>
+<ul>
+<li>经胃镜食管曲张静脉硬化剂治疗；</li>
+<li>经胃镜食管癌支架术；</li>
+<li>经鼻腔镜辅助颅底肿瘤切除术；</li>
+<li>经皮肾镜下碎石术；</li>
+<li>经显微内镜腰椎间盘脱出治疗术等。</li>
+</ul>
+</li>
+</ol>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 放射治疗</h2>
+<p>放射治疗是利用放射线如<code class="language-vim">放射性同位素产生的 α、 β、γ 射线和各类 X 线治疗机或加速器产生的 X 线、电子束、质子束及其他粒子束</code>等治疗疾病。</p>
+<p>放射治疗是<code class="language-vim">治疗肿瘤</code>的常用方法之一。</p>
+<p>放射线产生的生物效应有：</p>
+<ol>
+<li>
+<p>直接损伤：作用于细胞核内的脱氧核糖核酸 (DNA), 破坏核苷酸间的氢键，甚至切断一条多核
+苷酸链，导致细胞损伤；</p>
+</li>
+<li>
+<p>间接损伤：射线作用于体液中的水分子，导致水分子电离或激活，产生了各种自由基，这些自由基很不稳定，在含氧情况下容易形成过氧化氢。如果细胞利用这些物质组成蛋白质则容易使细胞“氧中毒”，导致细胞在分裂时死亡。</p>
+</li>
+</ol>
+<p>射线导致细胞死亡的形式有两种：</p>
+<ol>
+<li>细胞被大剂量射线照射时，发生分裂间期死亡，即在细胞进行下一次分裂前死亡，这种情况在临床上不易遇到；</li>
+<li>当细胞受到较小剂量射线照射后，根据照射剂量的大小，细胞经历一次或几次分裂，最后在分裂时死亡。这是在放射治疗时常见的细胞增殖死亡。</li>
+</ol>
+<p>放射治疗的副作用，<code class="language-vim">取决于不同细胞对射线的敏感性，也与放射治疗部位、面积、剂量及射线的性能等密切相关</code>。此外，与患者的全身情况，以前是否接受过化学治疗、放射治疗及手术等亦有关系。</p>
+<p>放射治疗的全身反应包括：</p>
+<ol>
+<li>血液系统主要表现为白细胞、血小板降低；</li>
+<li>胃肠系统表现为食欲缺乏、厌食、恶心、呕吐等；</li>
+<li>神经系统症状为乏力、嗜睡或失眠等。</li>
+</ol>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 物理疗法</h2>
+<p>现代物理疗法包括：电疗、超声治疗、磁疗、生物反馈、音乐电疗、光疗、冷热治疗、水疗、高压氧疗法等。</p>
+<p>目前物理疗法广泛用于：</p>
+<ol>
+<li>各种炎症尤其是慢性炎症的恢复治疗；</li>
+<li>各种神经系统疾病或损伤的恢复治疗；</li>
+<li>各种原因导致的肌肉损伤的治疗；</li>
+<li>术后并发症的治疗；</li>
+<li>有一些疗法如超声波扩大了原有的作用，成为外科手术工具。</li>
+</ol>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +338,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "04.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
