--- a/md/基础知识/02/04.html
+++ b/md/基础知识/02/04.html
@@ -136,8 +136,48 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第四节 临床医学在健康管理中的应用</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理与临床医学的相互关系</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理与临床医学的主要区别</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>临床医学在健康管理中的实际应用</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第四节 临床医学在健康管理中的应用</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理与临床医学的相互关系</h2>
+<ol>
+<li>临床医学是健康管理的学科基础</li>
+<li>健康管理是临床医学的学科延伸</li>
+<li>健康管理与临床医学的融合并存</li>
+</ol>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理与临床医学的主要区别</h2>
+<ol>
+<li>
+<p>服务目的不同</p>
+<p>健康管理以人的健康为中心，以健康风险因素检测预防或“零级预防”为重点；将预防的关口前移，以维护和促进个体或群体身心健康为目的；</p>
+<p>临床医学是以病人为中心，以研究疾病的病因、诊断、治疗和预后为重点，以提高治疗水平、缓解病人痛苦、促进疾病治愈或病情稳定为目的。</p>
+</li>
+<li>
+<p>服务对象不同</p>
+<p>健康管理服务的对象是<code class="language-vim">健康人群</code>、<code class="language-vim">亚健康人群</code>、<code class="language-vim">慢性病风险人群</code>和<code class="language-vim">慢性病早期康复人群</code>，而临床医学服务的对象为患有各种疾病的人群。</p>
+</li>
+<li>
+<p>服务模式不同</p>
+<p>健康管理服务的主要模式是全面检测、风险评估、有效干预和连续跟踪，而临床医学服务的主要模式是通过病史采集，体格检查和辅助检查确定诊断后，采用药物、手术、介入、放射和物理疗法等技术和手段实施治疗。</p>
+</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 临床医学在健康管理中的实际应用</h2>
+<ol>
+<li>
+<p>临床医学诊断方法在健康管理中的应用</p>
+<p>临床医学用于诊断的问诊、体格检查、实验室检查和辅助检查为健康管理信息采集提供了基本方法。</p>
+</li>
+<li>
+<p>临床医学非药物疗法在健康管理中的应用</p>
+<p>临床医学非药物疗法如针灸、推拿、康复理疗及营养治疗、运动疗法和心理干预等，为健康管理方案的制定和实施提供了更多的选择。</p>
+</li>
+<li>
+<p>临床医学指南或共识的应用</p>
+</li>
+<li>
+<p>临床医学思维方法在健康管理中的应用</p>
+</li>
+</ol>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +236,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "../03/index.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
